--- a/videofiltrato_logged.html
+++ b/videofiltrato_logged.html
@@ -47,27 +47,27 @@
                   <a href="esperienza_logged.html">Missione circumlunare</a>
                 </li>
                 <li>
-                  <a href="#">Volo a gravità zero</a>
+                  <a href="esperienza_logged.html">Volo a gravità zero</a>
                 </li>
                 <li>
-                  <a href="#">Addestramento da astronauta</a>
+                  <a href="esperienza_logged.html">Addestramento da astronauta</a>
                 </li>
                 <li>
-                  <a href="#">Visita la stazione spaziale</a>
+                  <a href="esperienza_logged.html">Visita la stazione spaziale</a>
                 </li>
                 <li>
-                  <a href="#">Camminata nello spazio</a>
+                  <a href="esperienza_logged.html">Camminata nello spazio</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Altre esperienze</li>
                 <li>
-                  <a href="#">Assisti ad un lancio spaziale</a>
+                  <a href="esperienza_logged.html">Assisti ad un lancio spaziale</a>
                 </li>
                 <li>
-                  <a href="#">Scopri le nostre tecnologie</a>
+                  <a href="esperienza_logged.html">Scopri le nostre tecnologie</a>
                 </li>
                 <li>
-                  <a href="#">Sicurezza</a>
+                  <a href="esperienza_logged.html">Sicurezza</a>
                 </li>
               </ul>
             </li>
