Migliorati tag news

--- a/news.html
+++ b/news.html
@@ -211,12 +211,9 @@
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
-													<li class="label label-default">universe</li>
 													<li class="label label-primary">space</li>
 													<li class="label label-success">earth</li>
-													<li class="label label-info">sky</li>
-													<li class="label label-warning">flight</li>
-													<li class="label label-danger">danger</li>
+													<li class="label label-danger">astronauts</li>
 												</ul>          
 											</div>
 										</div>
@@ -238,12 +235,8 @@
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
-													<li class="label label-default">universe</li>
-													<li class="label label-primary">space</li>
-													<li class="label label-success">earth</li>
 													<li class="label label-info">sky</li>
 													<li class="label label-warning">flight</li>
-													<li class="label label-danger">danger</li>
 												</ul>          
 											</div>
 										</div>
@@ -266,11 +259,7 @@
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
 													<li class="label label-default">universe</li>
-													<li class="label label-primary">space</li>
-													<li class="label label-success">earth</li>
-													<li class="label label-info">sky</li>
 													<li class="label label-warning">flight</li>
-													<li class="label label-danger">danger</li>
 												</ul>            
 											</div>
 										</div>
@@ -292,12 +281,9 @@
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
-													<li class="label label-default">universe</li>
 													<li class="label label-primary">space</li>
 													<li class="label label-success">earth</li>
-													<li class="label label-info">sky</li>
-													<li class="label label-warning">flight</li>
-													<li class="label label-danger">danger</li>
+													<li class="label label-danger">astronauts</li>
 												</ul>         
 											</div>
 										</div>
@@ -320,11 +306,7 @@
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
 													<li class="label label-default">universe</li>
-													<li class="label label-primary">space</li>
-													<li class="label label-success">earth</li>
 													<li class="label label-info">sky</li>
-													<li class="label label-warning">flight</li>
-													<li class="label label-danger">danger</li>
 												</ul>           
 											</div>
 										</div>
