--- a/ricercanews_logged.html
+++ b/ricercanews_logged.html
@@ -192,12 +192,9 @@
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
-													<li class="label label-default">universe</li>
 													<li class="label label-primary">space</li>
 													<li class="label label-success">earth</li>
-													<li class="label label-info">sky</li>
-													<li class="label label-warning">flight</li>
-													<li class="label label-danger">danger</li>
+													<li class="label label-danger">astronauts</li>
 												</ul>          
 											</div>
 										</div>
@@ -221,12 +218,9 @@
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
-													<li class="label label-default">universe</li>
 													<li class="label label-primary">space</li>
 													<li class="label label-success">earth</li>
-													<li class="label label-info">sky</li>
-													<li class="label label-warning">flight</li>
-													<li class="label label-danger">danger</li>
+													<li class="label label-danger">astronauts</li>
 												</ul>         
 											</div>
 										</div>
