Modificate descrizioni esperienze

--- a/esperienze_logged.html
+++ b/esperienze_logged.html
@@ -176,7 +176,7 @@
 								Le nostre esperienze ti permettono di vivere momenti indimenticabili, insieme ai tuoi amici e familiari!
 							</p>
 							<footer>
-								Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora maxime commodi illum explicabo assumenda ut ullam aut eum ex suscipit. Quas ea similique molestiae! Quisquam eos saepe harum voluptatem accusamus.
+								I nostri pacchetti offrono divertimento per tutte le fasce d'età!
 							</footer>
 						</blockquote>
 
@@ -197,7 +197,7 @@
                 <img class="img-circle" src="img/exp3.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Missione circumlunare</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>Un'unica opportunità per diventare un esploratore lunare!</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
@@ -207,7 +207,7 @@
                 <img class="img-circle" src="img/exp4.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Volo a gravità zero</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>Stufo della gravità? Ora hai l'occasione di provarne l'assenza.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
@@ -217,7 +217,7 @@
                 <img class="img-circle" src="img/exp1.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Addestramento da astronauta</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>Se essere un astronauta è sempre stato il tuo sogno, ora hai la possibilità di diventarlo davvero.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
@@ -227,7 +227,7 @@
                 <img class="img-circle" src="img/exp5.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Visita la stazione spaziale</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>Un viaggio tranquillo nel weekend, adatto per tutta la famiglia!</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
@@ -237,7 +237,7 @@
                 <img class="img-circle" src="img/exp6.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Camminata nello spazio</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>Le passeggiate in montagna ti hanno stufato? Puoi sempre provare a visitare lo spazio vuoto!</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
@@ -247,7 +247,7 @@
                 <img class="img-circle" src="img/exp2.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Assisti ad un lancio spaziale</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>Se lo spazio ti affascina, ma sei troppo affezionato alla Terra, puoi assistere ad un lancio spaziale dalla nostra base.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
@@ -257,7 +257,7 @@
                 <img class="img-circle" src="img/exp7.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Scopri le nostre tecnologie</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>Un tour guidato nella nostra base. Adatto a curiosoni scientifici di tutte le età!</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
@@ -267,7 +267,7 @@
                 <img class="img-circle" src="img/part4.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Sicurezza</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>La sicurezza al primo posto. Partecipa a questo corso per imparare tutto il necessario in questo ambito!</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
