--- a/ricercaesperienze.html
+++ b/ricercaesperienze.html
@@ -200,7 +200,7 @@
 								Le nostre esperienze ti permettono di vivere momenti indimenticabili, insieme ai tuoi amici e familiari!
 							</p>
 							<footer>
-								Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora maxime commodi illum explicabo assumenda ut ullam aut eum ex suscipit. Quas ea similique molestiae! Quisquam eos saepe harum voluptatem accusamus.
+								I nostri pacchetti offrono divertimento per tutte le fasce d'età!
 							</footer>
 						</blockquote>
 
@@ -223,7 +223,7 @@
 								<img class="img-circle" src="img/exp5.jpg" alt="Generic placeholder image" width="140" height="140">
 								<div class="caption">
 									<h4>Visita la stazione spaziale</h4>
-									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+									<p>Un viaggio tranquillo nel weekend, adatto per tutta la famiglia!</p>
 									<p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
 								</div>
 							</div>
@@ -233,7 +233,7 @@
                 <img class="img-circle" src="img/exp2.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
                   <h4>Assisti ad un lancio spaziale</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p>Se lo spazio ti affascina, ma sei troppo affezionato alla Terra, puoi assistere ad un lancio spaziale dalla nostra base.</p>
                   <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
