--- a/news_logged.html
+++ b/news_logged.html
@@ -188,9 +188,8 @@
                         <div class="col-sm-12 visible-xs"><br></div>
                         <!-- TAGS -->
                         <ul class="col-sm-9 text-right" aria-label="tags">
+                          <li class="label label-default">universe</li>
                           <li class="label label-primary">space</li>
-                          <li class="label label-success">earth</li>
-                          <li class="label label-danger">astronauts</li>
                         </ul>          
                       </div>
                     </div>
@@ -258,8 +257,7 @@
                         <div class="col-sm-12 visible-xs"><br></div>
                         <!-- TAGS -->
                         <ul class="col-sm-9 text-right" aria-label="tags">
-                          <li class="label label-primary">space</li>
-                          <li class="label label-success">earth</li>
+                          <li class="label label-warning">flight</li>
                           <li class="label label-danger">astronauts</li>
                         </ul>         
                       </div>
