--- a/ricercanews_logged.html
+++ b/ricercanews_logged.html
@@ -192,9 +192,8 @@
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
-													<li class="label label-primary">space</li>
-													<li class="label label-success">earth</li>
-													<li class="label label-danger">astronauts</li>
+                          <li class="label label-default">universe</li>
+                          <li class="label label-primary">space</li>
 												</ul>          
 											</div>
 										</div>
@@ -218,8 +217,7 @@
                         <div class="col-sm-12 visible-xs"><br></div>
 												<!-- TAGS -->
 												<ul class="col-sm-9 text-right" aria-label="tags">
-													<li class="label label-primary">space</li>
-													<li class="label label-success">earth</li>
+													<li class="label label-warning">flight</li>
 													<li class="label label-danger">astronauts</li>
 												</ul>         
 											</div>
