Aggiunti risultati di ricerca

--- a/ricercaglobale_logged.html
+++ b/ricercaglobale_logged.html
@@ -175,7 +175,7 @@
               <div class="col-md-6">
                 <p>Che cosa ti interessa?</p>
                 <div class="checkbox">
-                  <label><input type="checkbox" value="" ch>Esperienze</label>
+                  <label><input type="checkbox" value="" checked>Esperienze</label>
                 </div>
                 <div class="checkbox">
                   <label><input type="checkbox" value="">News</label>
