--- a/searched_logged.html
+++ b/searched_logged.html
@@ -177,7 +177,7 @@
           <div class="media">
             <a href="blog_logged.html#ricercato1">
               <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="trumpet">
+                <img class="media-object img-thumbnail" width="100" height="50" src="img/starwars.png" alt="star wars">
               </div>
               <div class="media-body">
                 <h4 class="media-heading">Come procede la guerra? - Blog</h4>
@@ -188,11 +188,33 @@
           <div class="media">
             <a href="foto1_logged.html">
               <div class="media-left">
-                <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="trumpet">
+                <img class="media-object img-thumbnail" width="100" height="50" src="img/spaceit.jpg" alt="fotografia">
               </div>
               <div class="media-body">
                 <h4 class="media-heading">Immagine - Foto gallery</h4>
                 Apri nella foto gallery
+              </div>
+            </a>
+          </div>
+          <div class="media">
+            <a href="esperienza_logged.html">
+              <div class="media-left">
+                <img class="media-object img-thumbnail" width="100" height="50" src="img/exp5.jpg" alt="esperienza stazione">
+              </div>
+              <div class="media-body">
+                <h4>Visita la stazione spaziale - Esperienza</h4>
+									Un viaggio tranquillo nel weekend, adatto per tutta la famiglia!
+              </div>
+            </a>
+          </div>
+          <div class="media">
+            <a href="esperienza_logged.html">
+              <div class="media-left">
+                <img class="media-object img-thumbnail" width="100" height="50" src="img/exp2.jpg" alt="esperienza lancio">
+              </div>
+              <div class="media-body">
+                 <h4>Assisti ad un lancio spaziale - Esperienza</h4>
+                 Se lo spazio ti affascina, ma sei troppo affezionato alla Terra, puoi assistere ad un lancio spaziale dalla nostra base. 
               </div>
             </a>
           </div>
