Aggiunto button rimuovi esperienza dal carrello

--- a/carrello.html
+++ b/carrello.html
@@ -182,10 +182,13 @@
                 </a>
               </div>
               <div class="col-md-3">
-                <br>
                 <h3>Prezzo:</h3>
                 <h4 class="text-danger">USD 5.000.000,00</h4>
+                 <a href="#">
+                  <input type="button" class="btn btn-danger btn-md" value="Rimuovi dal carrello">
+                </a>
               </div>
+
             </div> 
           </div>
 
