--- a/pagamento.html
+++ b/pagamento.html
@@ -12,10 +12,10 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
-    <link rel="icon" type="image/x-icon" href="img/1616.png">
-  </head>
+<link rel="icon" type="image/x-icon" href="img/1616.png">
+	</head>
 
-  <body>
+	<body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -158,49 +158,124 @@
     </nav>
 
 		<main class="container">
-      <ol class="breadcrumb">
-          <li><a href="indexlogged.html">Home</a></li>
-          <li class="active">Carrello</li>
-      </ol>
-      
-      <div class="panel panel-default">
 
-        <header class="panel-heading">
-          <h1>Il tuo carrello</h1>
-        </header>
+			<ol class="breadcrumb">
+				<li><a href="indexlogged.html">Home</a></li>
+				<li class="active">Pagamento</li>
+			</ol>
 
+			<div class="panel panel-default">
+
+				<header class="panel-heading">
+					<h1>
+						Pagamento
+					</h1>
+				</header>
         <div class="list-group jumbotron">
           <div class="list-group-item">
-            <div class="row">
-              <div class="col-md-3">
-                <img class="media-object img-rounded img-responsive" src="img/img1.jpg">
-              </div>
-              <div class="col-md-6">
-                <h2>Esperienza</h2>
-                <a href="esperienza_logged.html">
-                  <input type="button" class="btn btn-info btn-md" value="Dettagli esperienza">
-                </a>
-              </div>
-              <div class="col-md-3">
-                <h3>Prezzo:</h3>
-                <h4 class="text-danger">USD 5.000.000,00</h4>
-                 <a href="#">
-                  <input type="button" class="btn btn-danger btn-md" value="Rimuovi dal carrello">
-                </a>
-              </div>
+					<div class="row">
+						<form class="form-horizontal">
+								<div class="form-group">
+									<label class="col-sm-4 control-label" for="country">Tipo pagamento</label>
+									<div class="col-sm-2">
+										<select id="type" name="type" class="form-control">
+											<option value="Visa">Visa</option>
+											<option value="Master Card">Master Card</option>
+											<option value="Ipoteca casa">Ipoteca casa</option>
+										</select>
+									</div>
+								</div>							
 
-            </div> 
-          </div>
+								<!-- Nome e cognome -->
+								<div class="form-group">
+									<label class="col-sm-4 control-label" for="Name">Nome</label>  
+									<div class="col-sm-5">
+										<input id="Name" name="Name" type="text" placeholder="Nome" class="form-control input-md" required="">
+									</div>
+								</div>
 
-        <div class="panel-footer">
-          <h2 class="text-center">Totale ordine:</h2>
-          <h2 class="text-center text-danger">USD 5.000.000,00</h2>
-          <hr>
-          <a href="pagamento.html">
-            <input type="button" class="btn btn-primary btn-block btn-lg" value="Procedi al pagamento">
-          </a>
-        </div>
-      </div>
+								<div class="form-group">
+									<label class="col-sm-4 control-label" for="Name">Cognome</label>  
+									<div class="col-sm-5">
+										<input id="Surname" name="Surname" type="text" placeholder="Cognome" class="form-control input-md" required="">
+									</div>
+								</div>								
+
+								<!-- Selezione paese -->
+								<div class="form-group">
+									<label class="col-sm-4 control-label" for="country">Paese</label>
+									<div class="col-sm-5">
+										<select id="country" name="country" class="form-control">
+											<option value="Italia">Italia</option>
+											<option value="Stati Uniti d'America">Stati Uniti d'America</option>
+											<option value="Cina">Cina</option>
+											<option value="Russia">Russia</option>
+											<option value="India">India</option>
+											<option value="">Altro</option>
+										</select>
+									</div>
+								</div>
+
+								<!-- Numero carta -->
+								<div class="form-group">
+									<label class="col-sm-4 control-label" for="mobilenumber">Numero carta</label>  
+									<div class="col-sm-5">
+										<input id="cardnumber" name="cardnumber" type="text" placeholder="Numero" class="form-control input-md" required="">
+									</div>
+								</div>
+
+								<div class="form-group">
+									<label class="col-sm-4 control-label" for="expire">Data di scadenza (mm/aaaa)</label>
+									<div class="col-sm-2">
+										<select id="type" name="type" class="form-control">
+											<option value="1">1</option>
+											<option value="2">2</option>
+											<option value="3">3</option>
+											<option value="4">4</option>
+											<option value="5">5</option>
+											<option value="6">6</option>
+											<option value="7">7</option>
+											<option value="8">8</option>
+											<option value="9">9</option>
+											<option value="10">10</option>
+											<option value="11">11</option>
+											<option value="12">12</option>																												
+										</select>
+									</div>
+									<div class="col-sm-2">
+											<input id="cardnumber" name="cardnumber" type="text" placeholder="aaaa" class="form-control input-md" required="">
+									</div>								
+								</div>									
+
+
+
+
+								<!-- Prepended checkbox -->
+								<div class="form-group">
+									<label class="col-sm-4 control-label" for="check_critiria"></label>
+									<div class="col-sm-5">
+										<div class="input-group">
+											<span class="input-group-addon checkbox">     
+												<input type="checkbox" required="" checked>    
+												Accetto i termini di pagamento
+											</span>
+										</div>
+									</div>
+								</div>
+						</form>
+					</div>
+
+								<!-- Button -->
+
+
+
+										<a href="user.html">
+											<input type="button" class="btn btn-success btn-block btn-lg" value="Paga">
+										</a>
+
+						</div>
+					</div>
+				</div>
 		</main>
 
 		<footer class="footer">
