--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 
 	<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top ">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -182,7 +182,7 @@
 
 		<main class="container">
 
-      <hr>
+      <hr class="no-print">
 
 			<section id="myCarousel" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
@@ -220,9 +220,9 @@
 				</a>
 			</section>
 
-      <hr>
+      <hr class="no-print">
 
-      <section>
+      <section class="no-print">
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
             Video esemplificativo da YouTube.com
@@ -230,7 +230,7 @@
         </div>
       </section>
 			
-      <hr>
+      <hr class="no-print">
       
       <section>
         <div class="row">
@@ -283,7 +283,7 @@
       </section>
 		</main>
 
-		<footer class="footer">
+		<footer class="footer ">
 			<nav class="navbar-inverse">
 				<div class="container">
 					<ul class="nav navbar-nav">
