--- a/news.html
+++ b/news.html
@@ -313,7 +313,7 @@
 							</div>
 						</section>
 
-            <aside class="col-md-3">
+            <aside class="col-md-3 no-print">
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4>Cerca un articolo</h4>
