--- a/mappasito_logged.html
+++ b/mappasito_logged.html
@@ -160,7 +160,7 @@
       
       <div class="panel panel-default">
         <header class="panel-heading">
-          <h1>Mappa sito</h1>
+          <h1>Indice dei contenuti</h1>
         </header>
         
         <section class="panel-body">
