modifiche per print

--- a/indexlogged.html
+++ b/indexlogged.html
@@ -159,7 +159,7 @@
 
 		<main class="container">
 
-      <hr>
+      <hr class="no-print">
 
 			<section id="myCarousel" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
@@ -197,15 +197,15 @@
 				</a>
 			</section>
 
-      <hr>
+      <hr class="no-print">
 
-      <section>
+      <section class="no-print">
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         </div>
       </section>
 			
-      <hr>
+      <hr class="no-print">
       
       <section>
         <div class="row">
