--- a/esperienza_logged.html
+++ b/esperienza_logged.html
@@ -183,7 +183,7 @@
 
       <div class="row">
         <div class="col-sm-6">
-          <div class="embed-responsive embed-responsive-16by9">
+          <div class="embed-responsive embed-responsive-16by9 no-print">
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
