--- a/video.html
+++ b/video.html
@@ -237,7 +237,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -250,7 +250,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -263,7 +263,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -275,7 +275,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -290,7 +290,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -303,7 +303,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -316,7 +316,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -329,7 +329,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -342,7 +342,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
