--- a/video_logged.html
+++ b/video_logged.html
@@ -214,7 +214,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -227,7 +227,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -240,7 +240,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -252,7 +252,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -267,7 +267,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -280,7 +280,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -293,7 +293,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -306,7 +306,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
@@ -319,7 +319,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-							<div class="embed-responsive embed-responsive-16by9 div_style">
+							<div class="embed-responsive embed-responsive-16by9 no-print">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
 							<div class="caption">
