--- a/videofiltrato.html
+++ b/videofiltrato.html
@@ -217,7 +217,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption pull">
@@ -230,7 +230,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption">
@@ -243,7 +243,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption">
@@ -255,7 +255,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption">
@@ -270,7 +270,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption">
