--- a/videofiltrato_logged.html
+++ b/videofiltrato_logged.html
@@ -194,7 +194,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption pull">
@@ -207,7 +207,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption">
@@ -220,7 +220,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption">
@@ -232,7 +232,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption">
@@ -247,7 +247,7 @@
 					<div class="col-lg-4 col-sm-6">
 						<div class="thumbnail">
 							<h4>Titolo</h4>
-				         	<div class="embed-responsive embed-responsive-16by9 div_style">
+				         	<div class="embed-responsive embed-responsive-16by9 no-print">
 				        	    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/S9HdPi9Ikhk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				         	</div>
 							<div class="caption">
